service section is completed for larger screens

--- a/app/index.html
+++ b/app/index.html
@@ -28,8 +28,9 @@
 		</nav>
    
    <section class="large-hero">
+   			<img class="large-hero__img" src="assets/images/img_bg_1.jpg" />
     	
-    	<div class="flexslider">
+    	<!-- <div class="flexslider">
 		  <ul class="slides">
 		    <li>
 		    	<div class="large-hero__img-container">
@@ -66,10 +67,49 @@
 		</div>
     	
     </section>
+ -->
+
+    <section id="services" class="services container">
+    	<div class="services__main">
+    		<h1>Services</h1>
+    			<div></div>
+    		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi placeat expedita, ex neque. Impedit sed accusantium dolor! Optio, cumque accusantium </p>
+    	</div>
+
+    	<div class="services__left01">
+    		<i class="fa fa-umbrella services__icon-larger" aria-hidden="true"></i>
+    		<h3 class="services__sub-heading">Wealth Management</h3>
+    		<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nisi eligendi, mollitia, dolorem unde Lorem ipsum dolor sit amet. doloremque.</p>
+    	</div>
+		<div class="services__left02">
+			<i class="fa fa-desktop services__icon-larger" aria-hidden="true"></i>
+    		<h3 class="services__sub-heading">Investment Banking</h3>
+    		<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nisi eligendi, mollitia, dolorem unde doloremque. Lorem ipsum dolor sit amet. </p>
+    	</div>
+    	<div class="services__left03">
+    		<i class="fa fa-database services__icon-larger" aria-hidden="true"></i>
+    		<h3 class="services__sub-heading">Sales and Trading</h3>
+    		<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nisi eligendi, mollitia, dolorem unde doloremque. </p>
+    	</div>
+		<div class="services__right01">
+			<i class="fa fa-pencil services__icon-larger" aria-hidden="true"></i>
+    		<h3 class="services__sub-heading">Strategic Planning</h3>
+    		<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nisi eligendi, mollitia, dolorem unde doloremque. Tempora rerum, reiciendis ullam harum nulla assumenda voluptates quod incidunt</p>
+    	</div>
+		<div class="services__right02">
+			<i class="fa fa-cog services__icon-larger" aria-hidden="true"></i>
+    		<h3 class="services__sub-heading">Turnaround Consulting</h3>
+    		<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nisi eligendi, mollitia, dolorem unde doloremque. Tempora rerum, reiciendis </p>
+    	</div>
+		<div class="services__right03">
+			<i class="fa fa-book services__icon-larger " aria-hidden="true"></i>
+    		<h3 class="services__sub-heading">Bonds & Commodities</h3>
+    		<p class="services__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nisi eligendi, mollitia, dolorem unde doloremque Aliquid placeat ratione, sed architecto?</p>
+    	</div>
 
 
-    <section id="ervices">
-    	<h1>Services</h1>
+
+
     </section>
 
 
